--- a/ECharts/pie.html
+++ b/ECharts/pie.html
@@ -1,3 +1,5 @@
+<!-- 饼状图 -->
+
 <!DOCTYPE html>
 <html style="height: 100%">
    <head>
@@ -30,6 +32,10 @@ option = {
                 {value:335, name:'直接访问'},
                 {value:400, name:'搜索引擎'}
             ],
+            tooltip:{
+              trigger:'item',
+              formatter:"{a}<br/>{b}:{c}({d}%)"
+            },
             roseType: 'angle',
             label: {
                 normal: {
