--- a/ECharts/bar.html
+++ b/ECharts/bar.html
@@ -1,3 +1,5 @@
+<!-- 柱状图 -->
+
 <!DOCTYPE html>
 <head>
     <meta charset="utf-8">
@@ -14,8 +16,31 @@
       var myChart = echarts.init(document.getElementById('main'));
 
       var option = {
-          tooltip: {
-              show: true
+          title:{
+            text:'ECharts示例',
+          },
+          toolbox:{
+            show:true,
+            feature:{
+              dataView:{
+                show:true
+              },
+              restore:{
+                show:true
+              },
+              dataZoom:{
+                show:true
+              },
+              saveAsImage:{
+                show:true
+              },
+              magicType:{
+                type:['line','bar']
+              }
+            }
+          },
+          tooltip:{
+            trigger:'axis'//出发方式，axis就是从x轴出发
           },
           legend: {
               data:['销量']
@@ -35,7 +60,18 @@
               {
                   "name":"销量",
                   "type":"bar",
-                  "data":[5, 20, 40, 10, 10, 20]
+                  "data":[5, 20, 40, 10, 10, 20],
+                  markpoint:{
+                    data:[
+                      {type:'max',name:'最大值'},
+                      {type:'min',name:'最小值'}
+                    ]
+                  },
+                  markline:{
+                    data:[
+                      {type:'average',name:'平均值'}
+                    ]
+                  }
               }
           ]
       };
